--- a/Estilo.css
+++ b/Estilo.css
@@ -1,16 +1,11 @@
-h1{color:Red;font-size:25px;}
-h2{color:green;font-size:20px;}
-p{font-size:17;color:black;}
-body{background-size:1100px 720px}
+
 *{margin:0;
     box-sizing: border-box;
 }
-
 body {font-family: Arial, Helvetica, sans-serif;
     padding: 90px 20px 0;
 
 }
-
 .header{background-color: blueviolet;
 height: 80px;
 position: fixed;
@@ -22,7 +17,7 @@ left: 0;
 .nav{
     display: flex;
     justify-content: space-between;
-    max-width: 100%;
+    max-width: 992px ;
     margin: 0 auto;
 }
 
@@ -65,12 +60,11 @@ list-style: none;
 .toggle{
     
     color:white;
-    background-color: black;
-    font-size: 30px;
+    background-color: blue;
+    font-size: 16px;
     border:none;
-    padding: 0 20px;
-    line-height: 60;
-    cursor:progress;
+    padding: 12px 16px;
+    cursor:pointer;
     display: none;
 }
 
@@ -85,7 +79,7 @@ list-style: none;
 }
 
 @media(max-width:768px){
-    body{background-color: lilac;
+    body{background-color:lightblue ;
         padding-top: 70px;
     }
 
@@ -97,6 +91,7 @@ line-height: 60px;
 }
 
 .nav-menu{ flex-direction:column;
+    align-items:center;
     margin-right: 20px;
     background-color:#906ad8;
     position: fixed;
@@ -106,29 +101,38 @@ line-height: 60px;
     padding: 20px 0;
     height: calc(100%-60px);
     overflow: auto;
+   left: 100%;
+    transition: left 0.3s;
 }
 .nmi{line-height: 70px;}
 
-.nml:hover{background: none;
+.nml:hover,
+.nav-menu-linka {
+background: none;
 color:deepskyblue;} 
 
 .toggle{color:white;
-background-color:blue;
+background-color:gray;
 border: none;
 font-size:30px;
 padding: 0 20px;
-cursor: progress;
-display: none;
+cursor: pointer;
+display: block;
 }
 .btn{background-color: white;
 border:none;
 color: white;
 padding: 12px 16px;
 font-size: 16px;
-cursor: pointer;}}
+cursor: pointer;}
+}
+.nav-menvi{
+    left:0;
+ }
 .avatar {
     border-radius:50%;
     height: 60px;
+    width: 60px;
     object-fit: cover;
     object-position: right;
     width: 60px;
